--- a/pre-build/scss/common/media.scss
+++ b/pre-build/scss/common/media.scss
@@ -266,18 +266,24 @@
 
 @media (prefers-color-scheme: light) {
     body{
-        --d-bg: #fff;
+        --d-bg-body: #fff;
+        --d-c-title-h1: #202020;
+        --d-c-title-h2: #202020;
+        --d-c-title-h3: #202020;
+        --d-bdc: #ddd;
+        --d-c-main-txt: #333;
     }
 }
 
 
 @media (prefers-color-scheme: dark) {
-    // :root[data-theme='dark']{
-    //     --background: #{$body};
-    // }
-
     body{
-        --d-bg: #121212;
+        --d-bg-body: #181818;
+        --d-c-title-h1: rgba(242, 241, 241, 1);
+        --d-c-title-h2: rgba(242, 241, 241, 1);
+        --d-c-title-h3: rgba(242, 241, 241, 1);
+        --d-bdc: #3a3b3d;
+        --d-c-main-txt: #ececec;
     }
 }
 
