--- a/pre-build/scss/component/layout.scss
+++ b/pre-build/scss/component/layout.scss
@@ -186,9 +186,9 @@
   
     &.type01{margin-bottom: 30px;
       >.tabNav{margin-bottom: 15px;
-        >.tabList{border-bottom: 2px solid $dddBg; border-radius: 4px; background-color: $whiteBg;
+        >.tabList{border-bottom: 2px solid var(--d-bdc); border-radius: 4px;
           >li{position: relative; flex: 1; height: 35px; line-height: 35px;font-size: 1.13em;
-          cursor: pointer; text-align: center; color: $c000; font-family: $d-fz;
+          cursor: pointer; text-align: center; color: var(--c-tab); font-family: $d-fz;
             &.orange.active:before{background-color: #ed5e26;}
             &.pink.active:before{background-color: #cf649a;}
             &.blue.active:before{background-color: #2693cc;}
