--- a/pre-build/scss/scss-build/tooltip.css
+++ b/pre-build/scss/scss-build/tooltip.css
@@ -1,5 +1,18 @@
 /* text color */
 /* background */
+/* darkMode */
+body {
+  --d-bg: #fff;
+}
+
+body[data-theme='light'] {
+  --d-bg: #fff;
+}
+
+body[data-theme='dark'] {
+  --d-bg: #121212;
+}
+
 .resultArea .inner .toolTipBox {
   position: relative;
   width: 150px;
