--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -25,6 +25,7 @@
 
 /* text color */
 /* background */
+/* unit */
 /* reset */
 :root {
   overflow-wrap: break-word;
@@ -104,7 +105,11 @@ pre {
   bg: background
   hv: hover
   at: active
+  sc: scroll
+  ele: element
+  dis: disabled
   bdc: border color
+  pop: popup
 
 --------------------------------------------/
 
@@ -116,17 +121,36 @@ body {
   --d-c-title-h2: #202020;
   --d-c-title-h3: #202020;
   --d-c-main-txt: #333;
-  --d-c-left-menu-dep1: #707070;
-  --d-c-left-menu-dep2: #eee;
+  --d-c-left-menu-dep1: #333;
+  --d-c-left-menu-dep2: #707070;
+  --dis-c-left-menu-dep2: #ccc;
   --d-c-at-left-menu-dep1:#266bf7;
+  --d-c-at-left-menu-dep2:#266bf7;
+  --d-c-at-more-sub-menu: #202020;
+  --d-bg-left-menu-dep1: #707070;
+  --d-bg-left-menu-dep2: #eee;
+  --d-bg-at-more-sub-menu: #f3f4f5;
+  --d-bg-hv-more-sub-menu-item: rgba(204, 204, 204, 0.8);
+  --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
+  --d-bg-pop-filter: none;
   --d-bdc: #ddd;
   --d-sc-thumb: #ccc;
   --d-sc-track: #e9e9e9;
   --d-sc-hv-thumb: #b6b6b6;
   --d-sc-at-thumb: #808080;
+  --d-svg-current: #000;
   --c-emphasis01: #266bf7;
   --c-emphasis02: #1694d2;
   --c-tab:#000;
+  --logo-light: inline-block;
+  --logo-dark: none;
+  --ico-light: inline-block;
+  --ico-dark: none;
+  --mark-dep3: rgba(32, 32, 32, 0.75);
+  --bdc-btt: #000;
+  --bg-hv-btt: #000;
+  --hv-svg-btt: #fff;
+  --ele-shadow: #ddd;
 }
 
 body[data-theme='light'] {
@@ -136,17 +160,36 @@ body[data-theme='light'] {
   --d-c-title-h2: #202020;
   --d-c-title-h3: #202020;
   --d-c-main-txt: #333;
-  --d-c-left-menu-dep1: #707070;
-  --d-c-left-menu-dep2: #eee;
+  --d-c-left-menu-dep1: #333;
+  --d-c-left-menu-dep2: #707070;
+  --dis-c-left-menu-dep2: #ccc;
   --d-c-at-left-menu-dep1:#266bf7;
+  --d-c-at-left-menu-dep2:#266bf7;
+  --d-c-at-more-sub-menu: #202020;
+  --d-bg-left-menu-dep1: #707070;
+  --d-bg-left-menu-dep2: #eee;
+  --d-bg-at-more-sub-menu: #f3f4f5;
+  --d-bg-hv-more-sub-menu-item: rgba(204, 204, 204, 0.8);
+  --d-bg-hv-util-area-circle: rgba(221, 221, 221, 0.5);
+  --d-bg-pop-filter: none;
   --d-bdc: #ddd;
   --d-sc-thumb: #ccc;
   --d-sc-track: #e9e9e9;
   --d-sc-hv-thumb: #b6b6b6;
   --d-sc-at-thumb: #808080;
+  --d-svg-current: #000;
   --c-emphasis01: #266bf7;
   --c-emphasis02: #1694d2;
   --c-tab:#000;
+  --logo-light: inline-block;
+  --logo-dark: none;
+  --ico-light:inline-block;
+  --ico-dark: none;
+  --mark-dep3: rgba(32, 32, 32, 0.75);
+  --bdc-btt: #000;
+  --bg-hv-btt: #000;
+  --hv-svg-btt: #fff;
+  --ele-shadow: #ddd;
 }
 
 body[data-theme='dark'] {
@@ -157,21 +200,62 @@ body[data-theme='dark'] {
   --d-c-title-h3: rgba(242, 241, 241, 1);
   --d-c-main-txt: #ececec;
   --d-c-left-menu-dep1: rgba(242, 241, 241, 1);
-  --d-c-left-menu-dep2: #1e1f21;
+  --d-c-left-menu-dep2: #d9d9d9;
+  --dis-c-left-menu-dep2: #717171;
   --d-c-at-left-menu-dep1:rgba(89,148,241,1);
+  --d-c-at-left-menu-dep2:rgba(89,148,241,1);
+  --d-c-at-more-sub-menu: rgba(242, 241, 241, 1);
+  --d-bg-left-menu-dep1: rgba(242, 241, 241, 1);
+  --d-bg-left-menu-dep2: #1e1f21;
+  --d-bg-at-more-sub-menu: #2d2d2d;
+  --d-bg-hv-more-sub-menu-item: #53575C;
+  --d-bg-hv-util-area-circle: rgba(255,255,255,0.1);
+  --d-bg-pop-filter: blur(2.5px);
   --d-bdc: #3a3b3d;
   --d-sc-thumb: #686868;
   --d-sc-track: #424242;
   --d-sc-hv-thumb: #7b7b7b;
   --d-sc-at-thumb: #b6b6b6;
+  --d-svg-current: #fff;
   --c-emphasis01: rgba(89,148,241,1);
   --c-emphasis02: rgba(149,196,232,1);
   --c-tab:#ececec;
+  --logo-light: none;
+  --logo-dark: inline-block;
+  --ico-light: none;
+  --ico-dark: inline-block;
+  --mark-dep3: rgba(242, 241, 241, 1);
+  --bdc-btt: #fff;
+  --bg-hv-btt: #fff;
+  --hv-svg-btt: #000;
+  --d-svg-btt: #fff;
+  --ele-shadow: transparent;
 }
 
 body {
   color-scheme: light dark;
   background: var(--d-bg-body);
+}
+
+body .lightLogo {
+  display: var(--logo-light);
+}
+
+body .darkLogo {
+  width: 180px;
+  display: var(--logo-dark);
+}
+
+svg {
+  fill: currentColor;
+}
+
+svg.lightType {
+  display: var(--ico-light);
+}
+
+svg.darkType {
+  display: var(--ico-dark);
 }
 
 /* class */
@@ -441,7 +525,8 @@ body {
           justify-content: center;
   width: 48px;
   height: 48px;
-  border: 1px solid #000;
+  border: 1px solid var(--bdc-btt);
+  color: var(--d-svg-current);
   -webkit-transition: .5s;
   transition: .5s;
 }
@@ -530,8 +615,8 @@ body {
   padding: 16px 28px 16px 28px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border-bottom: 1px solid rgba(0, 0, 18, 0.08);
-  background-color: var(--d-c-left-menu-dep2);
+  border-bottom: 1px solid var(--d-bdc);
+  background-color: var(--d-bg-left-menu-dep2);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu.block {
@@ -539,7 +624,7 @@ body {
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li {
-  border-bottom: 1px solid rgba(0, 0, 18, 0.08);
+  border-bottom: 1px solid var(--d-bdc);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li a {
@@ -548,7 +633,7 @@ body {
   padding-bottom: 8px;
   font-family: "Noto Sans";
   font-size: 1.13em;
-  color: #707070;
+  color: var(--d-c-left-menu-dep2);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li a > .depthToggle {
@@ -568,7 +653,7 @@ body {
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li.on > a {
-  color: #266bf7;
+  color: var(--d-c-at-left-menu-dep2);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li.on .depthToggle {
@@ -587,13 +672,13 @@ body {
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li.disabled > a {
-  color: #ccc;
+  color: var(--dis-c-left-menu-dep2);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li > .dep3 {
   display: none;
   padding: 8px 0 0 25px;
-  border-top: 1px solid rgba(0, 0, 18, 0.08);
+  border-top: 1px solid var(--d-bdc);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li > .dep3 > li {
@@ -610,7 +695,7 @@ body {
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background-color: rgba(32, 32, 32, 0.75);
+  background-color: var(--mark-dep3);
 }
 
 .leftArea > .leftMenu > li > ul.leftSubMenu li > .dep3 > li > a {
@@ -659,12 +744,14 @@ body {
 .headArea > .inner .backArea .btnBack {
   position: relative;
   display: block;
+  color: var(--d-svg-current);
   width: 30px;
   height: 30px;
-  background-image: url("../../images/ico/ico-home.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 30px 30px;
+}
+
+.headArea > .inner .backArea .btnBack > svg {
+  width: 27px;
+  height: 27px;
 }
 
 .headArea > .inner .backArea .btnBack:before {
@@ -680,7 +767,7 @@ body {
   border-radius: 50px;
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
-  background-color: rgba(221, 221, 221, 0.5);
+  background-color: var(--d-bg-hv-util-area-circle);
 }
 
 .headArea > .inner .backArea.none {
@@ -714,12 +801,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border: 1px solid #ddd;
-  -webkit-box-shadow: 0px 0px 5px 1px #ddd;
-          box-shadow: 0px 0px 5px 1px #ddd;
+  border: 1px solid var(--d-bdc);
+  -webkit-box-shadow: 0px 0px 5px 1px var(--ele-shadow);
+          box-shadow: 0px 0px 5px 1px var(--ele-shadow);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #f3f4f5;
+  background-color: var(--d-bg-at-more-sub-menu);
 }
 
 .headArea > .inner .utilArea li .moreSubMenu > ul > li {
@@ -737,7 +824,7 @@ body {
 .headArea > .inner .utilArea li .moreSubMenu > ul > li > a, .headArea > .inner .utilArea li .moreSubMenu > ul > li span {
   width: auto;
   height: auto;
-  color: #202020;
+  color: var(--d-c-at-more-sub-menu);
   text-align: center;
   white-space: nowrap;
   font-size: 0.75em;
@@ -795,34 +882,22 @@ body {
   border-radius: 50px;
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
-  background-color: rgba(221, 221, 221, 0.5);
+  background-color: var(--d-bg-hv-util-area-circle);
 }
 
 .headArea > .inner .utilArea li button, .headArea > .inner .utilArea li a {
   display: block;
-  width: 30px;
-  height: 30px;
+  color: var(--d-svg-current);
 }
 
-.headArea > .inner .utilArea li button.btnMail, .headArea > .inner .utilArea li a.btnMail {
-  background: url("../../images/ico/ico-mail.svg") no-repeat center;
+.headArea > .inner .utilArea li button:where(.btnMail, .btnShare, .btnMore) > svg, .headArea > .inner .utilArea li a:where(.btnMail, .btnShare, .btnMore) > svg {
+  width: 27px;
+  height: 27px;
 }
 
-.headArea > .inner .utilArea li button.btnShare, .headArea > .inner .utilArea li a.btnShare {
-  background: url("../../images/ico/ico-share-bk.svg") no-repeat center;
-}
-
-.headArea > .inner .utilArea li button.btnMore, .headArea > .inner .utilArea li a.btnMore {
-  background: url("../../images/ico/ico-more.svg") no-repeat center;
-}
-
-.headArea > .inner .utilArea li button.btnDarkMode, .headArea > .inner .utilArea li a.btnDarkMode {
-  width: 30px;
-  height: 30px;
-  background-image: url("../../images/ico/ico-brightness.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 30px 30px;
+.headArea > .inner .utilArea li button.btnDarkMode > svg, .headArea > .inner .utilArea li a.btnDarkMode > svg {
+  width: 27px;
+  height: 27px;
 }
 
 .headArea > .inner .utilArea li + li {
@@ -1281,6 +1356,8 @@ i.ico.result {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
+  -webkit-backdrop-filter: var(--d-bg-pop-filter);
+          backdrop-filter: var(--d-bg-pop-filter);
 }
 
 code[class*=language-], pre[class*=language-] pre {
@@ -1801,6 +1878,7 @@ i.ico.center {
 /* import */
 /* text color */
 /* background */
+/* unit */
 .wrap.pre.headerFixed .container, .wrap.pre.headerScroll .container, .wrap.pre.headerToggle .container {
   position: relative;
 }
@@ -1920,6 +1998,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* unit */
 .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -2020,6 +2099,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* unit */
 .wrap.pre.footerBasic .contents {
   width: 100%;
 }
@@ -2200,6 +2280,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* unit */
 .wrap {
   position: relative;
   width: 100%;
@@ -2836,6 +2917,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* unit */
 .customSelect {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3100,6 +3182,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* unit */
 .mouseMenu {
   display: none;
   position: absolute;
@@ -3126,6 +3209,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* unit */
 .wrap.pre.popShowHide, .wrap.pre.dragPop {
   position: relative;
 }
@@ -3245,6 +3329,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* unit */
 #frameBody .wrap.pre.topButton .container {
   height: 100%;
   background-color: #ddd;
@@ -3384,6 +3469,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* unit */
 .resultArea .inner .toolTipBox {
   position: relative;
   width: 150px;
@@ -3423,6 +3509,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* unit */
 @media screen and (max-width: 1280px) {
   .titleH1 {
     font-size: 1.75em;
@@ -3743,7 +3830,7 @@ input[type="image"], input[type="color"], input[type="button"] {
     text-decoration: underline;
   }
   .headArea > .inner .utilArea li .moreSubMenu > ul > li:hover {
-    background-color: rgba(204, 204, 204, 0.8);
+    background-color: var(--d-bg-hv-more-sub-menu-item);
   }
   #wrap.main .btnStart:hover:before {
     -webkit-transform: scaleX(1);
@@ -3759,11 +3846,10 @@ input[type="image"], input[type="color"], input[type="button"] {
     text-decoration: underline;
   }
   .topArea .backtoTop:hover {
-    background-color: #000;
+    background-color: var(--bg-hv-btt);
   }
   .topArea .backtoTop:hover svg {
-    stroke: #fff;
-    fill: #fff;
+    fill: var(--hv-svg-btt);
   }
   .headArea > .inner .backArea .btnBack:hover:before {
     opacity: 1;
