--- a/pre-build/scss/component/layout.scss
+++ b/pre-build/scss/component/layout.scss
@@ -196,6 +196,7 @@
             &.active{font-weight: bold;
               &:before{content: ''; position: absolute; width: 100%; height: 3px; bottom: -1px; left: 0;}
             }
+            &:focus-visible{outline: 1.5px solid var(--d-key-focus);}
           }
         }
       }
